--- a/index.html
+++ b/index.html
@@ -8,38 +8,39 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#tests">Tests</a></li>
-                <li><a href="#videos">Vídeos</a></li>
-                <li><a href="#recursos">Recursos</a></li>
-            </ul>
-        </nav>
-    </header>
+  <nav>
+    <ul>
+      <li><a href="#inicio">Inicio</a></li>
+      <li><a href="#tests">Tests</a></li>
+      <li><a href="#videos">Vídeos</a></li>
+      <li><a href="#recursos">Recursos</a></li>
+    </ul>
+  </nav>
+</header>
 
-    <section id="inicio">
-        <h1>Bienvenido a Certificat Idioma</h1>
-        <p>Plataforma de autoaprendizaje para la preparación de exámenes oficiales de idiomas.</p>
-    </section>
+<section id="inicio">
+  <h1>Preparación de Idiomas – Autoaprendizaje</h1>
+  <p>Entrena con actividades interactivas, vídeos y recursos descargables. Estructurado por niveles y orientado a exámenes oficiales.</p>
+</section>
 
-    <section id="tests">
-        <h2>Tests Interactivos</h2>
-        <p>Aquí podrás practicar con ejercicios y simulacros de examen.</p>
-    </section>
+<section id="tests">
+  <h2>Tests Interactivos</h2>
+  <p>Practica con simulacros y actividades autocorregibles. Próximamente: bancos de preguntas por niveles (A2, B1, B2).</p>
+</section>
 
-    <section id="videos">
-        <h2>Vídeos de Apoyo</h2>
-        <p>Clases grabadas, explicaciones y tips para mejorar tu rendimiento.</p>
-    </section>
+<section id="videos">
+  <h2>Vídeos de Apoyo</h2>
+  <p>Lecciones breves con estrategias de examen, gramática clave y pronunciación. Se integran desde YouTube para carga rápida.</p>
+</section>
 
-    <section id="recursos">
-        <h2>Recursos Descargables</h2>
-        <p>Material extra para reforzar tu estudio.</p>
-    </section>
+<section id="recursos">
+  <h2>Recursos Descargables</h2>
+  <p>Guías, plantillas y hojas de práctica en PDF. Acceso por temas y nivel.</p>
+</section>
 
-    <footer>
-        <p>© 2025 Certificat Idioma - Plataforma de autoaprendizaje</p>
-    </footer>
+<footer>
+  <p>© 2025 Certificat Idioma — Plataforma de autoaprendizaje</p>
+</footer>
+
 </body>
 </html>
