--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav>
     <ul>
       <li><a href="#inicio">Inicio</a></li>
-      <li><a href="test-cambridge.html">Tests</a></li>
+      <li><a href="examen-prueba.html">Tests</a></li>
       <li><a href="#videos">Vídeos</a></li>
       <li><a href="#recursos">Recursos</a></li>
     </ul>
